--- a/Backoffice/nbproject/private/private.properties
+++ b/Backoffice/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Dr Breakalot\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\Wilco\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
