--- a/Backoffice/nbproject/project.properties
+++ b/Backoffice/nbproject/project.properties
@@ -29,9 +29,13 @@ dist.jar=${dist.dir}/Backoffice.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.gson-2.3.1.jar=lib\\gson-2.3.1.jar
+file.reference.retrofit-1.9.0.jar=lib\\retrofit-1.9.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.gson-2.3.1.jar}:\
+    ${file.reference.retrofit-1.9.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
