--- a/Backoffice/nbproject/project.properties
+++ b/Backoffice/nbproject/project.properties
@@ -30,12 +30,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.gson-2.3.1.jar=lib\\gson-2.3.1.jar
+file.reference.okhttp-2.3.0.jar=lib\\okhttp-2.3.0.jar
+file.reference.okio-1.3.0.jar=lib\\okio-1.3.0.jar
 file.reference.retrofit-1.9.0.jar=lib\\retrofit-1.9.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.gson-2.3.1.jar}:\
-    ${file.reference.retrofit-1.9.0.jar}
+    ${file.reference.retrofit-1.9.0.jar}:\
+    ${file.reference.okhttp-2.3.0.jar}:\
+    ${file.reference.okio-1.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
