--- a/Backoffice/nbproject/project.properties
+++ b/Backoffice/nbproject/project.properties
@@ -39,7 +39,8 @@ javac.classpath=\
     ${file.reference.gson-2.3.1.jar}:\
     ${file.reference.retrofit-1.9.0.jar}:\
     ${file.reference.okhttp-2.3.0.jar}:\
-    ${file.reference.okio-1.3.0.jar}
+    ${file.reference.okio-1.3.0.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
